# deanmachines-crewai

./: .env.example  .gitignore  Progress.md  README.md  changelog.md  prob.md  pyproject.toml  repomix-output.txt.md  requirements.txt
.github/: .copilot-instructions.md  .copilot-software-plan.md
.github/workflows/: ci.yml
New folder/: current-2025-03-25T3-29pm.drawio  current-2025-03-25T5-19pm.drawio
diagrams/: codeviz-diagram-2025-03-26T22-17-12.drawio  current-2025-03-25T5-22pm.drawio  current-2025-03-26T10-35am.drawio
knowledge/: categories.yaml  config.yaml
knowledge/domain-knowledge/: llm-optimization.yaml
knowledge/model-specific/: gemini-pro.yaml
knowledge/prompt-templates/: branch-thinking.md  code-generation.md  creative.md  meta-prompts.md  model-optimization.yaml  reasoning.md  research.md  tags.md  task-specific.md
knowledge/schemas/: entry.yaml
knowledge/templates/: model-capabilities.yaml
mlruns/0/: meta.yaml
mlruns/628510843323994625/: meta.yaml
mlruns/940848983405852145/: meta.yaml
mlruns/models/gemini-2.0-flash/: meta.yaml
mlruns/models/mlflow_registry/: meta.yaml
mlruns/models/mod/: meta.yaml
src/gemini/utils/: knowledge_manager.py  mlflow_manager.py
src/ollama/: __init__.py  crew.py  main.py  main_multi_gemini_test.py  multi_gemini_crew.py  simplified_agents.py  simplified_tasks.py
src/ollama/config/: __init__.py  agents.yaml  mlflow_config.yaml  models.yaml  search_tools.yaml  tasks.yaml  tools.yaml
src/ollama/crews/: model_crews.py
src/ollama/knowledge/: integration.py  manager.py  search.py
(+26 files in other folders)
