[project]
name = "ollama"
version = "0.1.0"
description = "ollama using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
ollama = "ollama.main:run"
run_crew = "ollama.main:run"
train = "ollama.main:train"
replay = "ollama.main:replay"
test = "ollama.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
